# freebsd-ports-libchromiumcontent

./: Makefile  chromium-Makefile.diff  distinfo  pkg-descr
files/: patch-chromium_Makefile  patch-chromiumcontent_BUILD.gn  patch-chromiumcontent_args_ffmpeg.gn  patch-chromiumcontent_args_shared__library.gn  patch-chromiumcontent_args_static__library.gn  patch-patches_v8_007-backport__f19b889.patch  patch-patches_v8_009-backport__bca8409.patch  patch-patches_v8_010-backport__f9c4b7a.patch  patch-patches_v8_013-revert__abi__breaking__changes__in__6__1.patch  patch-patches_v8_015-backport__9b21865822243.patch  patch-patches_v8_017-backport__163d360.patch  patch-patches_v8_023-backport__b1cd96e.patch  patch-patches_v8_025-cherry__pick__cc55747.patch  patch-script_build  patch-script_create-dist  patch-script_update
